syntax = "proto3";

package proto;

service HelloService {
    rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
    string name = 1;
}

message SayHelloResponse {
    string hello = 1;
}

service EchoService {
    rpc Echo (EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
    string name = 1;
}

message EchoResponse {
    string echo = 1;
}
